# galvanic-api

./: .env  .env.example  .gitignore  README.md  pyproject.toml
apps/api/: urls.py
apps/api/views/core/: __init__.py  history.py  urls.py
apps/core/: apps.py
apps/core/migrations/: 0001_initial.py  0002_sensor_max_threshold_sensor_min_threshold_and_more.py
apps/core/models/: __init__.py  machine.py  sensor.py
apps/core/services/: redis_storage.py  sensor_simulator.py
apps/unfold_admin/: admin.py
config/: asgi.py  settings.py  urls.py
