[project]
name = "rox-backend"
version = "0.1.0"
description = "Rox backend app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels>=4.3.2",
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-filter>=25.2",
    "django-rest-framework>=0.1.0",
    "django-unfold>=0.91.0",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-yasg>=1.21.15",
    "psycopg[binary]>=3.3.3",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "redis>=7.4.0",
    "rest-framework-simplejwt>=0.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.10",
]

[tool.ruff.lint]
ignore = ["F401"]
